# turtlebot4_ws

./: .gitignore
src/oakd/: package.xml  setup.py
src/oakd/config/: cam_A.yaml  cam_B.yaml  cam_C.yaml  oakd.yaml  oakd_lite.yaml  recorder_B.yaml  recorder_C.yaml
src/oakd/launch/: cam_A.launch.py  cam_B.launch.py  cam_C.launch.py  oakd.launch.py  rig.launch.py
src/waypoint_nav/: package.xml  setup.py
src/waypoint_nav/waypoint_nav/: exhaustive_pool_room.py  navigator.py  poses_linear_star.py  poses_pool_back_zigzag.py  poses_pool_whole.py  table_star_pattern.py
src/waypoint_plugin/: CMakeLists.txt  package.xml  waypoint_plugin.xml
src/waypoint_plugin/include/waypoint_plugin/: wait_and_photo_at_waypoint.hpp
src/waypoint_plugin/src/: wait_and_photo_at_waypoint.cpp
