<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oakd</name>
  <version>0.0.0</version>
  <description>Custom python package for oakd launch files</description>
  <maintainer email="felix-max-jakob.mayer@student.uni-tuebingen.de">mayerfel</maintainer>
  <license>TODO: License declaration</license>

  <depend>depthai_bridge</depend>
  <depend>depthai_examples</depend>
  <depend>depthai_ros_driver</depend>
  <depend>depthai_ros_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
