<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waypoint_plugin</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="felix-max-jakob.mayer@student.uni-tuebingen.de">Felix Mayer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_common</depend>
  <depend>cv_bridge</depend>
  <depend>pluginlib</depend>
  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_core</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/waypoint_plugin.xml"/>
  </export>
</package>
